--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- font-awesome -->
+    <script src="https://kit.fontawesome.com/7215b34a52.js" crossorigin="anonymous"></script>
+    <!-- font-awesome -->
+    <!-- css-link -->
+    <link rel="stylesheet" href="style.css">
+     <!-- css-link -->
+
 </head>
 <body>
+    <section>
+        <header class="cc">
+           <article class="dd">
+            <h1 class="bb">start your journey as  </h1>
+            <h1 class="aa">influencer</h1>
+            <p>Influencer marketing (also known as influence marketing) is a form of social media marketing involving endorsements and product placement from influencers, people and organizations who have a purported expert level of knowledge or social influence in their field.[1] Influencers are someone (or something) with the power to affect the buying habits or quantifiable actions of others by uploading some form of original—often sponsored—content to social media platforms like Instagram, YouTube, Snapchat or other online channels.</p>
+            <br>
+            <span>
+                <button class="ff">preebook now <i class="fas fa-camera"></i></button>
+            </span>
+           </article>
+           <article class="ee">
+               <img src="images/main-camera.png">
+           </article>
+        </header>
+    </section>
     
 </body>
 </html>
